# lidar-robot

my_bot/: CMakeLists.txt  package.xml
my_bot/config/: my_controllers.yaml
my_bot/description/: camera.xacro  gazebo_control.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
my_bot/launch/: camera.launch.py  launch_sim.launch.py  rplidar.launch.py  rsp.launch.py
my_bot/worlds/: obstacles1.world
src/my_bot/: package.xml
src/my_bot/config/: view_bot.rviz
src/my_bot/description/: robot.urdf.xacro  robot_core.xacro  ros2_control
src/my_bot/worlds/: obstacles.world
